@@ -2,13 +2,16 @@ package com.example.buysell.services;
 
 import com.example.buysell.models.Image;
 import com.example.buysell.models.Product;
+import com.example.buysell.models.User;
 import com.example.buysell.repositories.ProductRepository;
+import com.example.buysell.repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.security.Principal;
 import java.util.List;
 
 @Service
@@ -16,7 +19,7 @@ import java.util.List;
 @Slf4j
 public class ProductService {
     private final ProductRepository repository;
-
+    private final UserRepository userRepository;
     public List<Product> listProducts(String title) {
         if (title != null) return repository.findByTitle(title);
         return repository.findAll();
@@ -25,9 +28,17 @@ public class ProductService {
     public Product getById(Long id) {
         return repository.getReferenceById(id);
     }
-    public void save(Product product, MultipartFile file1,
+
+    public User getUserByPrincipal(Principal principal) {
+        if (principal == null) return new User();
+        return userRepository.findByEmail(principal.getName());
+    }
+
+    public void save(Principal principal,
+                     Product product, MultipartFile file1,
                      MultipartFile file2,
                      MultipartFile file3) throws IOException {
+        product.setUser(getUserByPrincipal(principal));
         Image image1;
         Image image2;
         Image image3;
@@ -44,10 +55,10 @@ public class ProductService {
             image3 = toImage(file3);
             product.addImage(image3);
         }
-        log.info("Saving new Product. Title: {}; Author: {}", product.getTitle(), product.getAuthor());
-        log.info("About photos: {}", product.getImages().get(0).getContentType());
+        log.info("Saving new Product. Title: {}; email: {}", product.getTitle(), product.getUser().getEmail());
+        log.info("About photos: {}", product.getImages().getFirst().getContentType());
         Product productFromDb = repository.save(product);
-        productFromDb.setPreviewImageId(productFromDb.getImages().get(0).getId());
+        productFromDb.setPreviewImageId(productFromDb.getImages().getFirst().getId());
         repository.save(product);
     }
     public  void delete(Long id) {
